--- a/README
+++ b/README
@@ -1,7 +1,30 @@
 /* 
  * CFLog is a singleton logging object for more powerful logging in your cocoa projects
- * Camron Flanders
  *
+ * Permission is hereby granted, free of charge, to any person
+ * obtaining a copy of this software and associated documentation
+ * files (the "Software"), to deal in the Software without
+ * restriction, including without limitation the rights to use,
+ * copy, modify, merge, publish, distribute, sublicense, and/or sell
+ * copies of the Software, and to permit persons to whom the
+ * Software is furnished to do so, subject to the following
+ * conditions:
+ * 
+ * The above copyright notice and this permission notice shall be
+ * included in all copies or substantial portions of the Software.
+ * 
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+ * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
+ * OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+ * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
+ * HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
+ * WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+ * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
+ * OTHER DEALINGS IN THE SOFTWARE.
+ * 
+ * Created by Camron Flanders on 2.23.09
+ * Copyright 2009 camronflanders. All rights reserved.
+ * 
  */
 
 
@@ -12,6 +35,14 @@ To use:
 
 
 I added -D_CFLOG_ENABLED to my Project Settings `Other C Flags` for my DEBUG project setting profile only. This means that my release and distro project profiles don't log anything, which is what I want. Logging is a fairly expensive process, so this should improve performance for your users.
+
+
+Main Configuration:
+- GLOBAL_SOFT_ENABLE, this is our secondary on/off switch. Turning this off will still allow you to force output on single statements.
+- BARE_OUTPUT, if you turn this on then you will get standard NSLog output.
+- LOG_FULL_PATH, if NO, it will only output the filename.
+- LOG_LEVEL, this is the output threshold. anything more critical than this is output, less critical is ignored.
+
 
 CFLog can accept a couple arguments: Level and Override.
 Debug levels are 1-5 (DEBUG, INFO, WARNING, ERROR, CRITICAL)
