--- a/README
+++ b/README
@@ -41,12 +41,13 @@ Main Configuration:
 - GLOBAL_SOFT_ENABLE, this is our secondary on/off switch. Turning this off will still allow you to force output on single statements.
 - BARE_OUTPUT, if you turn this on then you will get standard NSLog output.
 - LOG_FULL_PATH, if NO, it will only output the filename.
-- LOG_LEVEL, this is the output threshold. anything more critical than this is output, less critical is ignored.
+- LOG_LEVEL, this is the output threshold. Anything more critical than this is output, less critical is ignored.
+- DISABLE_NSLOG_WITH_CFLOG, this is a 0/1 option. If you set this to 1, wherever _CFLOG_ENABLED is undefined, we also kill NSLog statments. Turn this to 0 to keep NSLog working. Again, NSLog is a fairly expensive operation, disabling this for release/distro profiles is recommended.
 
 
 CFLog can accept a couple arguments: Level and Override.
 Debug levels are 1-5 (DEBUG, INFO, WARNING, ERROR, CRITICAL)
-Override is nice, so you can turn the GLOBAL_SOFT_ENABLE setting to NO (off) and still log a few important things without commenting out all your logging statments.
+Override is nice, so you can turn the GLOBAL_SOFT_ENABLE setting to NO (off) and still log a few important things without commenting out all your logging statements.
 
 I have included a few convenience functions that you can use:
 cfDebug, cfInfo, cfWarning, cfError, cfCritical are mapped to a non-forced level-specific cfLog call.
