--- a/README
+++ b/README
@@ -30,7 +30,7 @@
 
 *NEW*
 To Try:
-- Build/Run our CFLogDemo project. Play with the settings in CFLog.h to see how it affects logging.
+- Build/Run the CFLogDemo project. Play with the settings in CFLog.h to see how it affects logging.
 
 
 To use in your projects:
