--- a/README
+++ b/README
@@ -30,29 +30,34 @@
 
 *NEW*
 To Try:
-- Build/Run the CFLogDemo project. Play with the settings in CFLog.h to see how it affects logging.
+- Build/Run the CFLogDemo project. Play with the settings in 
+    CFLog.h to see how it affects logging.
 
 
 To use in your projects:
 - Add CFLog.h and CFLog.m to your project.
 - Add CFLog.h to the files where you will be logging.
-- Define _CFLOG_ENABLED. You can uncomment the first config line in CFLog.h or you can add it in your project settings.
+- Define _CFLOG_ENABLED. You can uncomment the first config 
+    line in CFLog.h or you can add it in your project settings.
 
 
-I added -D_CFLOG_ENABLED to my Project Settings `Other C Flags` for my DEBUG project setting profile only. This means that my release and distro project profiles don't log anything, which is what I want. Logging is a fairly expensive process, so this should improve performance for your users.
+I added -D_CFLOG_ENABLED to my Project Settings `Other C Flags` 
+for my DEBUG project setting profile only. This means that my 
+release and distro project profiles don't log anything, which 
+is what I want. Logging is a fairly expensive process, so this 
+should improve performance for your users.
 
 
-Main Configuration:
-- GLOBAL_SOFT_ENABLE, this is our secondary on/off switch. Turning this off will still allow you to force output on single statements.
-- BARE_OUTPUT, if you turn this on then you will get standard NSLog output.
-- LOG_FULL_PATH, if NO, it will only output the filename.
-- LOG_LEVEL, this is the output threshold. Anything more critical than this is output, less critical is ignored.
-- DISABLE_NSLOG_WITH_CFLOG, this is a 0/1 option. If you set this to 1, wherever _CFLOG_ENABLED is undefined, we also kill NSLog statments. Turn this to 0 to keep NSLog working. Again, NSLog is a fairly expensive operation, disabling this for release/distro profiles is recommended.
-
+To Configure:
+- Open CFLog.h and edit settings in the CONFIGURATION area. All 
+    of the settings should be well documented.
 
 CFLog can accept a couple arguments: Level and Override.
 Debug levels are 1-5 (DEBUG, INFO, WARNING, ERROR, CRITICAL)
-Override is nice, so you can turn the GLOBAL_SOFT_ENABLE setting to NO (off) and still log a few important things without commenting out all your logging statements.
+Override is nice, so you can turn the GLOBAL_SOFT_ENABLE setting 
+to NO (off) and still log a few important things without 
+commenting out all your logging statements.
 
 I have included a few convenience functions that you can use:
-cfDebug, cfInfo, cfWarning, cfError, cfCritical are mapped to a non-forced level-specific cfLog call.
+cfDebug, cfInfo, cfWarning, cfError, cfCritical are mapped 
+to a non-forced level-specific cfLog call.
