--- a/CBFLogDemo/CBFLogDemo.1
+++ b/CBFLogDemo/CBFLogDemo.1
@@ -4,10 +4,10 @@
 .\"man mdoc for the short list of editing options
 .\"/usr/share/misc/mdoc.template
 .Dd 2.24.09               \" DATE 
-.Dt CFLogDemo 1      \" Program name and manual section number 
+.Dt CBFLogDemo 1      \" Program name and manual section number 
 .Os Darwin
 .Sh NAME                 \" Section Header - required - don't modify 
-.Nm CFLogDemo,
+.Nm CBFLogDemo,
 .\" The following lines are read in generating the apropos(man -k) database. Use only key
 .\" words here as the database is built based on the words here and in the .ND line. 
 .Nm Other_name_for_same_program(),
