--- a/CBFLogDemo/CBFLogDemo.1
+++ b/CBFLogDemo/CBFLogDemo.1
@@ -3,7 +3,7 @@
 .\"man mdoc.samples for a complete listing of options
 .\"man mdoc for the short list of editing options
 .\"/usr/share/misc/mdoc.template
-.Dd 2.24.09               \" DATE 
+.Dd 8/27/09               \" DATE 
 .Dt CBFLogDemo 1      \" Program name and manual section number 
 .Os Darwin
 .Sh NAME                 \" Section Header - required - don't modify 
